# cortex

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml  deny.toml  justfile  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
.opencode/plans/: a7f3c-cortex2-kanban-tui.md  fix-sse-heartbeat-and-fk-constraint.md  fix-tracing-log-leak.md  investigate-empty-tasks.md  investigate-task-view-regression.md  rename-cortex2-to-cortex.md  review-fixes-critical-and-high.md  startup-screen-refresh-fix.md
benches/: benchmarks.rs
crates/opencode-sdk-rs/: .cargo_vcs_info.json  Cargo.toml
crates/opencode-sdk-rs/src/resources/: session.rs
examples/: cortex.toml
src/: error.rs  lib.rs  main.rs
src/config/: defaults.rs  mod.rs  serialization.rs  types.rs
src/opencode/: client.rs  events.rs  mod.rs  server.rs  sse.rs
src/opencode/events/: dispatch.rs  event_loop.rs  mod.rs  tests.rs
src/orchestration/: engine.rs  mod.rs
src/persistence/: db.rs  mod.rs
src/state/: mod.rs  navigation.rs  permissions.rs  sse_processor.rs  store.rs  types.rs
src/state/store/: archive_deps.rs  dirty.rs  mod.rs  persistence.rs  projects.rs  sessions.rs  tasks.rs  tests.rs
src/state/types/: enums.rs  mod.rs  project.rs  task.rs  ui.rs
src/tui/: app.rs  archive_viewer.rs  config_editor.rs  confirm_dialog.rs  diff_view.rs  editor_handler.rs  help.rs  kanban.rs  keys.rs  loading.rs  mod.rs  permission_modal.rs  prompt.rs  reports.rs  sidebar.rs  status_bar.rs  task_card.rs  task_detail.rs  task_editor.rs  tracing_layer.rs
src/tui/app/: mod.rs  mouse.rs  permission.rs  utils.rs
src/tui/app/handlers/: kanban.rs  mod.rs  project.rs  review.rs  subagent.rs  task.rs
src/tui/app/modes/: archive.rs  config_editor.rs  confirm.rs  diff_review.rs  editor.rs  mod.rs  normal.rs  reports.rs
tests/: concurrent_state.rs  config_pipeline.rs  persistence_roundtrip.rs
