[package]
name = "cortex2"
version = "0.1.0"
edition = "2021"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Config
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Persistence
rusqlite = { version = "0.32", features = ["bundled"] }

# OpenCode SDK — provides HTTP client (hpx), SSE streaming, typed API,
# automatic retries, structured errors.
opencode-sdk-rs = "0.2"

# HTTP client (server health checks only)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tracing-log = "0.2"
log = "0.4"  # kept for tracing-log bridge (downstream crates use `log`)
anyhow = "1"
clap = { version = "4", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
