[package]
name = "cortex"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[lib]
name = "cortex"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "process", "io-util", "signal", "net"] }
futures = "0.3"
pin-project-lite = "0.2"
bytes = "1"

# Config
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Persistence
rusqlite = { version = "0.32", features = ["bundled"] }

# OpenCode SDK — provides HTTP client (hpx), SSE streaming, typed API,
# automatic retries, structured errors.
opencode-sdk-rs = "0.2"

# hpx — HTTP client used directly for SSE event streaming with per-chunk
# read_timeout. The SDK uses hpx internally but doesn't expose read_timeout,
# so we build SSE connections directly for correct long-lived stream handling.
hpx = "1.4"

# reqwest — used for lightweight HTTP health checks against the OpenCode server.
# Kept separate from the SDK's hpx client because: (1) hpx is designed for SSE
# streaming with per-chunk read timeouts and is tightly coupled to the SDK's
# event pipeline, (2) health checks need only a simple GET with a short timeout,
# and (3) reqwest's default-features = false keeps this dependency minimal.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

[lints.clippy]
# Disallowed methods are tracked as warnings (defined in clippy.toml).
# Allow the lint at the workspace level so -D warnings in CI doesn't
# turn them into errors. The warnings still appear in CI output to
# guide contributors toward the recommended patterns.
disallowed_methods = "warn"
