[package]
name = "cortex"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[lib]
name = "cortex"
path = "src/lib.rs"

[[bin]]
name = "cortex"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "process", "io-util", "signal", "net"] }
futures = "0.3"
pin-project-lite = "0.2"
bytes = "1"

# Config
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Persistence
rusqlite = { version = "0.32", features = ["bundled"] }

# OpenCode SDK — provides HTTP client (hpx), SSE streaming, typed API,
# automatic retries, structured errors.
opencode-sdk-rs = "0.2"

# hpx — HTTP client used directly for SSE event streaming with per-chunk
# read_timeout. The SDK uses hpx internally but doesn't expose read_timeout,
# so we build SSE connections directly for correct long-lived stream handling.
hpx = "1.4"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "benchmarks"
harness = false

[patch.crates-io]
opencode-sdk-rs = { path = "crates/opencode-sdk-rs" }

[lints.clippy]
# Disallowed methods are tracked as warnings (defined in clippy.toml).
# Allow the lint at the workspace level so -D warnings in CI doesn't
# turn them into errors. The warnings still appear in CI output to
# guide contributors toward the recommended patterns.
disallowed_methods = "warn"
